--- a/public/signUp.html
+++ b/public/signUp.html
@@ -24,7 +24,7 @@
             <label>
             </label>
           </div>
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
           <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
         </form>
       </body>
