--- a/public/login.html
+++ b/public/login.html
@@ -26,7 +26,14 @@
             </label>
           </div>
           <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-          <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
-        </form>
+          <form action="/signUp.html">
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Create an account</button>
+            <p id="copyright" class="mt-5 mb-3 text-muted">&copy; </p>
+          </form>
+          </form>
+        <script>
+          const year = new Date().getFullYear();
+          document.getElementById("copyright").innerText += year + "-" + (year + 1);
+        </script>
       </body>
 </html>
