--- a/public/login.html
+++ b/public/login.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="login.css">
     </head>
     <body class="text-center">
+      <form action="/signUp" method="GET" id="createacc">
+      </form>
         <form class="form-signin" action="/login" method="POST">
           <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
           <label for="inputUsername" class="sr-only">Username</label>
@@ -26,10 +28,8 @@
             </label>
           </div>
           <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-          <form action="/signUp.html">
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Create an account</button>
+            <button id="signUp" form="createacc" class="btn btn-lg btn-primary btn-block" type="submit">Create an account</button>
             <p id="copyright" class="mt-5 mb-3 text-muted">&copy; </p>
-          </form>
           </form>
         <script>
           const year = new Date().getFullYear();
